# try

./: CPP小组.md  README.md
c++/STL标准库/: STL标准模板库.md
c++/环境配置/vscode配置/: vscode.md
golang/web开发/: web开发.md
golang/参考资料/: 参考资料.md
golang/基础语言学习/: GO语言基础学习.md
golang/进阶/: 进阶.md
开源项目/c++聊天室/: c聊天室.md
开源项目/c++聊天室/include/clientlogin/: CMakeLists.txt  clientlogin.c  clientlogin.h
开源项目/c++聊天室/include/erro/: CMakeLists.txt  erro.c  erro.h
开源项目/c++聊天室/include/mysql_connection/: CMakeLists.txt  mysql_connect.c  mysql_connect.h  test
开源项目/c++聊天室/include/serverlogin/: CMakeLists.txt  serverlogin.c  serverlogin.h
开源项目/c++聊天室/script/: cmd码对应功能.txt  mysql语句.sql
开源项目/c++聊天室/src/: CMakeLists.txt  client.c  server.c
开源项目/golang聊天室/: client  client.go  golang聊天室.md  main.go  server  server.go  user.go
资源分享/学习网站/: 学习网站.md
